# movie_recommendation

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: .gitignore  DEPLOY_GUIDE.md  MEMORY_DEBUG.md  README.md  debug_memory.py  pytest.ini  requirements.txt  run_debug.sh  streamlit_app.py  streamlit_data_loader.py  streamlit_recommender.py  train_and_save_model.py
app/models/: recommender_model.pkl
app/tests/: __init__.py  conftest.py  test_data_loader.py  test_recommender.py
app/utils/: README.md  __init__.py  data_loader.py  recommender.py  recommender_lite.py
cold_start/: show_random_movies.py
data_scraping/: README.md  REFACTORING_SUMMARY.md  auth_state.json  custom_movie_rating.py  login_watcha.py  main.ipynb  movie_info.py  run_all.py  run_custom_rating.py  run_movie_comments.py  run_movie_info.py
data_scraping/common/: __init__.py  browser_manager.py  config.py  data_cleaner.py  data_loader.py  data_storage.py  exceptions.py  logger.py
data_scraping/data/: custom_movie_rating.txt  movie_comments.txt  movie_info_watcha.txt
data_scraping/debug/: debug_comments.py  debug_custom_rating.py  debug_movie_info.py
data_scraping/legacy/: README.md  clean_movie_info.py  movie_comments.py  test.py
data_scraping/scrapers/: __init__.py  base_scraper.py  (+3 more)
modeling/: README.md  run_item_based_pipeline.py  run_svd_pipeline.py  train_and_save_model.py
user_system/: README.md  __init__.py  firebase_app.py  firebase_auth.py  firebase_config.py  firebase_firestore.py  firebase_integrated_app.py  firebase_recommender.py  setup_guide.md
(+19 files in other folders)
